--- a/modules/admin_manual/pages/configuration/server/oc_server_tuning.adoc
+++ b/modules/admin_manual/pages/configuration/server/oc_server_tuning.adoc
@@ -175,7 +175,7 @@ latency by as much as 50%. We recommend to keep the KeepAliveTimeout between 3 a
 Higher numbers can block the Server with inactive connections.
 In combination with the periodic checks of the sync client the following settings are recommended:
 
-[source,bash]
+[source,apache]
 ----
 KeepAlive On
 KeepAliveTimeout 3
@@ -187,6 +187,10 @@ MaxKeepAliveRequests 200
 [source,bash]
 ----
 cat /etc/httpd/conf/httpd.conf
+----
+
+[source,plaintext]
+----
     ...
 HostnameLookups off
 ----
@@ -194,5 +198,4 @@ HostnameLookups off
 ==== Log files
 
 Log files should be switched off for maximum performance. 
-To do that, comment out the https://httpd.apache.org/docs/current/mod/mod_log_config.html#customlog[CustomLog] directive. 
-However, keep https://httpd.apache.org/docs/2.4/logs.html#errorlog[ErrorLog] set, so errors can be tracked down.
+To do that, comment out the https://httpd.apache.org/docs/current/mod/mod_log_config.html#customlog[CustomLog] directive. However, keep https://httpd.apache.org/docs/2.4/logs.html#errorlog[ErrorLog] set, so errors can be tracked down.
