--- a/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration_quick_guide.adoc
+++ b/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration_quick_guide.adoc
@@ -16,49 +16,49 @@ This quick guide gives a brief summary of the commands needed without going into
 
 === Activate Master Key-Based Encryption
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} maintenance:singleuser --on
-{occ-command-example-prefix} app:enable encryption
-{occ-command-example-prefix} encryption:enable
-{occ-command-example-prefix} encryption:select-encryption-type masterkey -y
-{occ-command-example-prefix} encryption:encrypt-all --yes
-{occ-command-example-prefix} maintenance:singleuser --off
+occ maintenance:singleuser --on
+occ app:enable encryption
+occ encryption:enable
+occ encryption:select-encryption-type masterkey -y
+occ encryption:encrypt-all --yes
+occ maintenance:singleuser --off
 ----
 
 === View the Encryption Status
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} encryption:status
+occ encryption:status
 ----
 
 === Decrypt Encrypted Files
 
 Depending on the amount of existing data, this operation can take a long time.
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} maintenance:singleuser --on
-{occ-command-example-prefix} encryption:decrypt-all
-{occ-command-example-prefix} maintenance:singleuser --off
+occ maintenance:singleuser --on
+occ encryption:decrypt-all
+occ maintenance:singleuser --off
 ----
 
 === Deactivate Master-Key-Based Encryption
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} encryption:disable
+occ encryption:disable
 
 # ignore the "already disabled" message
-{occ-command-example-prefix} app:disable encryption
+occ app:disable encryption
 ----
 
 If the master key has been compromised or exposed, you can replace it. You will need the current master key for it.
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} encryption:recreate-master-key
+occ encryption:recreate-master-key
 ----
 
 == User-Key-Based Encryption
@@ -67,14 +67,14 @@ IMPORTANT: User-Key encryption has been deprecated with xref:{latest-docs-versio
 
 === Activate User-Key-Based Encryption
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} maintenance:singleuser --on
-{occ-command-example-prefix} app:enable encryption
-{occ-command-example-prefix} encryption:enable
-{occ-command-example-prefix} encryption:select-encryption-type user-keys
-{occ-command-example-prefix} encryption:encrypt-all --yes
-{occ-command-example-prefix} maintenance:singleuser --off
+occ maintenance:singleuser --on
+occ app:enable encryption
+occ encryption:enable
+occ encryption:select-encryption-type user-keys
+occ encryption:encrypt-all --yes
+occ maintenance:singleuser --off
 ----
 
 After User-specific encryption is enabled, users must log out and log back in to trigger the automatic personal encryption key generation process.
@@ -94,47 +94,47 @@ They need to:
 
 === View the Encryption Status
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} encryption:status
+occ encryption:status
 ----
 
 === Decrypt Encrypted Files
 
 If you have an ownCloud instance with only a few users, you can use the following example to decrypt the files. Note that you have to enter the password for each user manually. The admin must ensure all users have enabled the recovery password option in their personal settings page.
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} maintenance:singleuser --on
-{occ-command-example-prefix} encryption:decrypt-all
+occ maintenance:singleuser --on
+occ encryption:decrypt-all
 
 #Choose the "Recovery key" Option
 #Enter **Recovery Key** for **each user**
 
 # Recovery Key is a password set by the admin
-{occ-command-example-prefix} maintenance:singleuser --off
+occ maintenance:singleuser --off
 ----
 
 If you have a large instance with many users, use this to decrypt the files:
 
 * Set the environment  variable with e.g. `export OC_RECOVERY_PASSWORD=1111`, then run this set of commands and replace "1111" with your actual Recovery Key:
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
 export OC_RECOVERY_PASSWORD=1111
-{occ-command-example-prefix} maintenance:singleuser --on
+occ maintenance:singleuser --on
 sudo -E -u www-data php occ encryption:decrypt-all -m recovery -c yes
-{occ-command-example-prefix} maintenance:singleuser --off
+occ maintenance:singleuser --off
 ----
 
 === Deactivate User-Specific Key-based Encryption
 
-[source,bash,subs="attributes+"]
+[source,bash]
 ----
-{occ-command-example-prefix} encryption:disable
+occ encryption:disable
 
 # ignore the "already disabled" message
-{occ-command-example-prefix} app:disable encryption
+occ app:disable encryption
 ----
 
 == Clean up Your Database
