--- a/modules/admin_manual/pages/installation/system_requirements.adoc
+++ b/modules/admin_manual/pages/installation/system_requirements.adoc
@@ -45,7 +45,7 @@ For _best performance_, _stability_, _support_, and _full functionality_ we offi
 |
 * Debian 10
 * Fedora 32 and 33
-* Red Hat Enterprise Linux/Centos 7.5 and 8
+* Red Hat Enterprise Linux 7 and 8 including all 100% compatible derivatives
 * SUSE Linux Enterprise Server 12 with SP4/5 and 15
 * Ubuntu 20.04
 * openSUSE Leap 15.2
