--- a/modules/admin_manual/pages/enterprise/external_storage/sharepoint-integration_configuration.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/sharepoint-integration_configuration.adoc
@@ -19,7 +19,7 @@ properly accessed as per SharePoint rules.
 
 The plugin uses the Simple Object Access Protocol (SOAP) and WebDAV for
 the uploads and downloads to talk to SharePoint servers. Your ownCloud
-server must have `php-soap` or `php7-soap` installed, and enabled as a php module.
+server must have `php-seclib` and `php-soap` or `php7-soap` installed; and enabled soap as a php module.
 A webserver restart may be needed after changing php modules.
 
 The supported authentication methods are:
