--- a/modules/admin_manual/pages/installation/system_requirements.adoc
+++ b/modules/admin_manual/pages/installation/system_requirements.adoc
@@ -73,7 +73,7 @@ For Linux distributions, we support, if technically feasible, the latest two ver
 === Hypervisors
 
 * Hyper-V
-* VMware ESX
+* VMware ESX - ownCloud must run without overcommitment of cores or RAM for larger (1000+ users) installations 
 * Xen
 * KVM
 
