[10.9] [PR 290] replace deprecated download.owncloud.org url
Backport of PR #290

--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
@@ -208,7 +208,7 @@ systemctl restart apache2
 [source,bash,subs="attributes+"]
 ----
 cd /var/www/
-wget https://download.owncloud.org/community/{oc-complete-name}.tar.bz2 && \
+wget {oc-complete-base-url}/{oc-complete-name}.tar.bz2 && \
 tar -xjf {oc-complete-name}.tar.bz2 && \
 chown -R www-data. owncloud
 ----
