--- a/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
@@ -347,26 +347,6 @@ even if he isn't active in the web UI.
 'session_keepalive' => true,
 ....
 
-=== Enable to force user logout
-Force the user to get logged out after the specified number of seconds when
-the tab or browser gets closed. A negative or 0 value disables this feature.
-
-Note that the user can still access the page without re-authenticating
-(having valid access) if the timeout has not been reached.
-The recommended minimum value is 5 or 10 seconds. Using a lower value
-might cause unwanted logouts for users.
-
-Note that this feature works properly if the user uses one tab only.
-If a user uses multiple tabs, closing one of them will likely
-force the rest to re-authenticate.
-
-==== Code Sample
-
-[source,php]
-....
-'session_forced_logout_timeout' => 0,
-....
-
 === Enforce token only authentication for apps and clients connecting to ownCloud
 If enabled, all access requests using the user's password are blocked for enhanced security.
 
@@ -2032,20 +2012,6 @@ NOTE: Lowering this value may lead to unexpected behaviour, and can include data
 'minimum.supported.desktop.version' => '2.3.3',
 ....
 
-=== Define the suggested poll interval for clients
-Specifies how often clients should poll the server for changes.
-
-The value is in milliseconds. The value is not enforced.
-Clients may use this value to decide how frequently to check the server for
-changes.
-
-==== Code Sample
-
-[source,php]
-....
-'pollinterval' => 30000,
-....
-
 === Define whether to include external storage in quota calculation
 EXPERIMENTAL: option whether to include external storage in quota
 calculation, defaults to false.
@@ -2331,7 +2297,7 @@ For details see: https://datatracker.ietf.org/doc/html/rfc4918#section-10.2
 
 [source,php]
 ....
-'dav.propfind.depth_infinity' => false,
+'dav.propfind.depth_infinity' => true,
 ....
 
 === Show the grace period popup
