--- a/modules/admin_manual/pages/configuration/files/external_storage/configuration.adoc
+++ b/modules/admin_manual/pages/configuration/files/external_storage/configuration.adoc
@@ -19,7 +19,7 @@ xref:mount-options[external mountpoints]. Sharing on such mountpoints is disable
 
 == Enabling External Storage Support
 
-Prerequisite: `Settings > Apps > External storage support` is enabled.
+Prerequisite: menu:Settings[Apps > External storage support] is enabled.
 Tick the checkbox under `Settings > Storage > "Enable External Storage"`.
 
 image:configuration/files/external_storage/enable-app.png[Enabling External Storage Support in ownCloud]
