--- a/modules/admin_manual/pages/configuration/server/email_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/email_configuration.adoc
@@ -295,7 +295,7 @@ NOTE: Immediately after pressing the btn:[Send email] button, as described befor
 
 == Using Email Templates
 
-NOTE: You have to install and enable a custom theme in order to use and customize email templates. Additionally you need to have the Mail Template Editor app installed and enabled.
+NOTE: You have to install and enable a custom theme in order to use and customize email templates. Additionally you need to have the {oc-marketplace-url}/apps/templateeditor[Mail Template Editor] app installed and enabled.
 
 Most emails sent from ownCloud are based on editable email templates, which are a mixture of PHP and HTML. The currently available templates are:
 
@@ -350,7 +350,7 @@ Most emails sent from ownCloud are based on editable email templates, which are 
 In addition to providing the email templates, this feature enables you to apply any pre-configured themes to the email. To modify an email template to users:
 
 1.  Log in as the admin user.
-2.  Navigate to admin > settings > general (admin section).
+2.  Navigate to menu:Settings[Admin > General > Mail Templates].
 3.  Select a template from the drop-down menu.
 4.  Make any desired modifications to the template.
 
