--- a/modules/admin_manual/pages/configuration/server/config_apps_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_apps_sample_php_parameters.adoc
@@ -207,6 +207,10 @@ Possible keys: `wopi.office-online.server` URL
 
 Possible keys: `wopi_group` STRING
 
+Possible keys: `wopi.proxy.url` URL
+
+Possible keys: `wopi.business-flow.enabled` STRING
+
 === Random key created by the ownCloud admin
 This is a random key created by the ownCloud admin. This key is used by ownCloud
 to create encrypted JWT tokens for the communication with your Microsoft Office Online instance.
@@ -242,6 +246,26 @@ Restrict access to Microsoft Office Online to a defined group. Please note, only
 [source,php]
 ....
 'wopi_group' => '',
+....
+
+=== Define the Proxy URL
+This _global_ option defines the proxy URL if you are a Microsoft Business user. Note that you will get a working URL from {oc-support-url}[ownCloud Support] post a written declaration that your company has an eligable Microsoft Business contract.
+
+==== Code Sample
+
+[source,php]
+....
+'wopi.proxy.url' => 'https://o365.example.com',
+....
+
+=== Define if Business Flow Is Enabled
+This _global_ option defines if Office users are business users. In that case, Office Online will check if the user logged in has an Office 365 business account. If not, the user must sign in and Office Online will check if the subscription is valid. Use `yes` to enable it and `no` to disable it or remove the key completely. To use this option, you need at least ownClouds {oc-marketplace-url}/apps/wopi[Microsoft Office Online] app version 1.6.0.
+
+==== Code Sample
+
+[source,php]
+....
+'wopi.business-flow.enabled' => 'no',
 ....
 
 == App: Microsoft Teams Bridge
