--- a/modules/admin_manual/pages/enterprise/external_storage/sharepoint-integration_configuration.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/sharepoint-integration_configuration.adoc
@@ -20,7 +20,7 @@ properly accessed as per SharePoint rules.
 The plugin uses the Simple Object Access Protocol (SOAP) and WebDAV for
 the uploads and downloads to talk to SharePoint servers. Your ownCloud
 server must have the php modules `php-phpseclib` and `php-soap` installed
-and `phpenmod soap` enabled. A webserver restart may be needed after adding/changing php modules.
+and the SOAP module enabled with `phpenmod soap`. A webserver restart may be required after adding/changing php modules.
 
 The supported authentication methods are:
 
